--- a/src/styles.css
+++ b/src/styles.css
@@ -2,6 +2,7 @@ p {
   color: rgb(43, 42, 42);
   font-family: "Raleway", sans-serif;
   font-weight: bold;
+  text-transform: capitalize;
 }
 .weather-app {
   text-align: center;
